--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 chrono = "0.4"
-confy = "0.4.0"
 human-panic = "1.0.3"
 clap = "2.33.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
