--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4"
 human-panic = "1.0.3"
 clap = "2.33.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.8"
+flate2 = "1.0"
+tar = "0.4"
